--- a/tkd8973/Knn+NaiveBayes+Confusion_Matrix.ipynb
+++ b/tkd8973/Knn+NaiveBayes+Confusion_Matrix.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNP9/DpVi24EIMB6pqiaDEl",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tkd8973/MachineLearning_SW/blob/main/tkd8973/Knn%2BNaiveBayes%2BConfusion_Matrix.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,15 +12,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# KNN (K-Nearest Neighbor)\n"
-      ],
       "metadata": {
         "id": "aC9fc7jnpiOQ"
-      }
+      },
+      "source": [
+        "# KNN (K-Nearest Neighbor)\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fBw0seMfqN-5"
+      },
       "source": [
         "* 다중 분류 \n",
         "* 거리 기반 -> 관측값들의 거리를 계산 후, 해당 정답값 과 얼마나 가까운지 계산하여 새로운 예측값을 도출\n",
@@ -48,13 +35,13 @@
         "* 단점\n",
         ">* 데이터가 많아지면 속도 감소(거리의 계산), \n",
         ">* K의 값에 따른 변화 -> 적절한 K값 선택 (default = 5)\n"
-      ],
-      "metadata": {
-        "id": "fBw0seMfqN-5"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QOcfCkLZtDyA"
+      },
       "source": [
         "# Scaling\n",
         "* 단위를 맞추기 위해 통계적 변화를 시키는 전처리\n",
@@ -80,26 +67,26 @@
         ">* 모양 보정 O , 이상치 보정 X -> 분포모양 변화 X\n",
         "\n",
         "* 'sklearn.preprocessing'"
-      ],
-      "metadata": {
-        "id": "QOcfCkLZtDyA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sxhu6EJosVCB"
+      },
       "source": [
         "# Naive Bayes\n",
         "* A라는 조건이 있을때 B라는 사건이 발생할 확률 -> 특정한 범주형 변수를 만족할 때, 예측값이 나올 확률 계산\n",
         "* 모든 변수들이 독립적이고, 가능하면 범주형 (소속, pd.dummies, One-Hot encoding)\n",
         "* 자연어 분석\n",
         ">* 문장, 글의 주제, 감정, 속성을 예측/분류하는 알고리즘(스팸 여부, 리뷰 긍/부정) -> 범주형, 이산형의 다중분류 ex) 별점1~5"
-      ],
-      "metadata": {
-        "id": "sxhu6EJosVCB"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "aV_XAKVayZTs"
+      },
       "source": [
         "# 자연어 전처리\n",
         "* 영어 기준\n",
@@ -124,13 +111,14 @@
         "* 형태소 분석기를 사용해 갔다,간다 -> 가다 로 변환\n",
         "> (Mecab,Okt,Khailll)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "aV_XAKVayZTs"
-      }
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OMJXAcub66Di"
+      },
       "source": [
         "# Confusion matrix (혼동행렬)\n",
         "`from sklearn.metrics import confusion_matrix`\n",
@@ -146,23 +134,36 @@
         ">* 스팸아닌데 스팸\n",
         "\n",
         "---\n",
-        "TN : True Negative(실제 거짓, 예측 거짓)\n",
-        "TP : True Positive(실제 참, 예측 참)\n",
-        "FP : False Positive(실제 거짓, 예측 참 -> 1종오류)\n",
-        "FN : False Negative(실제 참, 예측 거짓 -> 2종오류)\n"
-      ],
-      "metadata": {
-        "id": "OMJXAcub66Di"
-      }
+        "* TN : True Negative(실제 거짓, 예측 거짓)\n",
+        "* TP : True Positive(실제 참, 예측 참)\n",
+        "* FP : False Positive(실제 거짓, 예측 참 -> 1종오류)\n",
+        "* FN : False Negative(실제 참, 예측 거짓 -> 2종오류)\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "5R2sRuUk61Um"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNP9/DpVi24EIMB6pqiaDEl",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
